Allow skipping draining of pods during update/scaledown
Fix #70

Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/docs/custom-resource-definitions.yaml
+++ b/docs/custom-resource-definitions.yaml
@@ -28,6 +28,8 @@ spec:
       properties:
         spec:
           properties:
+            skipDraining:
+              type: boolean
             scaling:
               properties:
                 enabled:
